feat: add handler, service and response for getting stage detail
